fix dark mode

--- a/apps/app-host/src/styles/theme.less
+++ b/apps/app-host/src/styles/theme.less
@@ -36,7 +36,7 @@
   margin-left: -24px;
   padding: 12px 24px 0 24px;
   border-bottom: none;
-  background-color: #ebf0f9;
+  background-color: inherit;
 }
 
 // END HEADER
